--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.1",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "prepack": "tsc"
   },
   "main": "lib/index.js",
   "repository": {
